# spatial_justice_fp

./: LICENCE.md  README.md  pyproject.toml  requirements.md
data/: data.geojson  ies.geojson  upl.geojson  upl.json
src/analysis/: accesibility.py  accessibility.py  io.py  main.py  network.py  pois.py  socioeconomic.py
src/swm/: analysis.py  boundingbox.py  io.py  main.py  network.py  viz.py
src/swm/weights/: __init__.py  contiguity.py  distance.py  socioeconomic.py
