[project]
name = "swm-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "libpysal",
    "matplotlib>=3.10.9",
    "typer>=0.25.1",
]

[project.scripts]
fp = "swm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages =["src/swm"]

